feat:优化gradle插件配置